# taskmd

./: .gitignore  AGENTS.md  Cargo.toml  OPERATIONS.md  README.md  SPEARS.md  SPEARS_AGENT.md  pyproject.toml
.github/workflows/: publish-crate.yml  publish.yml
.hypothesis/constants/: 04830b75cdf7f263  49f8ad7792e983ba  5e85490769a2e28c  cfe6cfd6d5c6d044
.hypothesis/examples/04e6b3400353b141/: 5de12daec6c0a7f9  de6ee59d7e93b5a7
.hypothesis/examples/5de12daec6c0a7f9/: b31abeb438d3922b
.hypothesis/examples/de6ee59d7e93b5a7/: 0a76a935e529f58c  0b64be9900e09dab  1832abefafbfb158  296ebe7d726c73b2  29b67009587a39dd  330906b95681fcc4  34d6622dc1fa4e35  403694a132f05761  49625d4ee19268f3  4e8f743fbf9cf31b  5e562e15ca58e4f7  60b972ba37d26ffa  637bdc21745fdb62  6a1e30388e0f5215  6e4891b9db778609  71b8441ffdb33be5  735061410c5d59d5  790199e62e13f593  7a1b5d33abd57cb8  87e3b541e8d19512  88b978876864c7fd  91f0b1031741fb6f  9b759e1dd9382cd0  a2b2b08d54cdb32d  a2fb4f3002c52b5c  a7b355b0de53df5e  af5748403c43f737  d2298fb86984816d  d86bdc5fd73ba2b9
docs/: agent-cli-design.md
specs/taskmd/: design.md  executive.md  requirements.md
src/taskmd/: __init__.py  _core.pyi  agent.py  cli.py  core.py
taskmd-core/: Cargo.toml
taskmd-core/src/: constants.rs  create.rs  date.rs  error.rs  filename.rs  fix.rs  frontmatter.rs  ids.rs  init.rs  lib.rs  tasks.rs  util.rs  validate.rs
taskmd-core/tests/: proptests.proptest-regressions  proptests.rs
taskmd-py/: Cargo.toml
taskmd-py/src/: lib.rs
tasks/: 09001-p2-done--fix-renumber-duplicate-ids.md  09001-p2-ready--fix-renumber-duplicate-ids.md  09002-p2-done--taskmd-status-cli.md  09002-p2-ready--taskmd-status-cli.md  _TEMPLATE.md
tests/: test_core.py  test_properties.py
