[project]
name = "taskmd"
version = "0.1.0"
description = "Markdown-native task management for developer projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Scott Opell" }]

# Zero dependencies — stdlib only
dependencies = []

[project.scripts]
taskmd = "taskmd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskmd"]
