[project]
name = "taskmd"
version = "0.1.1"
description = "Markdown-native task management for developer projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Scott Opell" }]

# Zero Python dependencies — all logic lives in the Rust extension.
dependencies = []

[project.scripts]
taskmd = "taskmd.cli:main"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
# taskmd-py is the thin PyO3 wrapper; taskmd-core is the pure Rust library
manifest-path = "taskmd-py/Cargo.toml"
module-name = "taskmd._core"
python-source = "src"

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "pytest>=9.0.2",
]
